WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312741
[YARR] Forward references are no longer JIT-compiled
https://bugs.webkit.org/show_bug.cgi?id=312741
Summary
[YARR] Forward references are no longer JIT-compiled
Sosuke Suzuki
Reported
2026-04-19 20:37:06 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-04-19 20:37:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63092
EWS
Comment 2
2026-04-20 23:51:40 PDT
Committed
311657@main
(582f25b3e697): <
https://commits.webkit.org/311657@main
> Reviewed commits have been landed. Closing PR #63092 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-20 23:52:13 PDT
<
rdar://problem/175226576
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug